2007-07-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([-lookupActionForCalDAVMethod:]): removed method.
	([SOGoAppointmentFolder -davNamespaces]): added new overriden
	method that declares the DAV namespace related to CalDAV.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -davNamespaces]): new
	optional method for subclasses which handle specific extensions to
	the DAV protocol: CardDAV or CalDAV.
	([SOGoFolder
	-lookupName:lookupNameinContext:localContextacquire:acquire]):
	new overriden method that handles dav invocations for extensions
	to DAV by returning an appropriate SoSelectorInvocation.

	* SoObjects/SOGo/NSString+Utilities.m ([NSString
	-asDavInvocation]): new method returning a dictionary with a "ns"
	key representing the dav namespace and a "method" key representing
	the dav method name of the request.

	* UI/PreferencesUI/UIxPreferences.m ([UIxPreferences
	+initialize]): scan the value of SOGoUIxUserCanChangePassword.
	Default is "no".
	([UIxPreferences -shouldDisplayPasswordChange]): new template
	method that returns the value of SOGoUIxUserCanChangePassword.

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage +initialize]):
	scan the value of SOGoUIxDefaultModule. If not set, the default
	module defaults to "Calendar".
	([SOGoUserHomePage -defaultAction]): redirect the user to the
	value of "SOGoUIxDefaultModule".

2007-07-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-contactInfos]): cache the results to avoid multiple invocations.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder -toOneRelationshipKeys]): check whether we
	really should return something or if we fake to return nil...

2007-07-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser +initialize]): set
	acceptAnyUser to YES only when the SOGoAuthentificationMethod user
	default is set to "bypass".
